@startuml

title __NOTIFICATIONS's Class Diagram__\n

  namespace com.example.search_eat_pis {
    namespace ui.notifications {
      class com.example.search_eat_pis.ui.notifications.NotificationsFragment {
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.example.search_eat_pis {
    namespace ui.notifications {
      class com.example.search_eat_pis.ui.notifications.NotificationsViewModel {
          - mText : MutableLiveData<String>
          + NotificationsViewModel()
          + getText()
      }
    }
  }
  

  com.example.search_eat_pis.ui.notifications.NotificationsFragment -up-|> androidx.fragment.app.Fragment
  com.example.search_eat_pis.ui.notifications.NotificationsFragment o-- com.example.search_eat_pis.databinding.FragmentNotificationsBinding : binding
  com.example.search_eat_pis.ui.notifications.NotificationsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
